# SAAAAAA

./: .env.example  .gitignore  .importlinter  .pre-commit-config.yaml  AGENT_3_FINAL_SUMMARY.md  AGENT_3_PROGRESS_REPORT.md  AGGREGATION_MODULE_SUMMARY.md  ARCHITECTURE_DIAGRAM.md  ARCHITECTURE_REFACTORING.md  ATROZ_INTEGRATION_GUIDE.md  Analyzer_one.py  BAYESIAN_MULTILEVEL_README.md  BITACORA_PROYECTO.md  BUILD_HYGIENE.md  CANONICAL_NOTATION_AUDIT.md  CHECKLIST_SUMMARY.md  CHESS_TACTICAL_SUMMARY.md  CHOREOGRAPHER_EVIDENCE_GUIDE.md  CHOREOGRAPHER_IMPLEMENTATION_SUMMARY.md  CLEANING_AUDIT_REPORT.md  COMMIT_2_SUMMARY.md  COMMIT_3_PROGRESS.md  COMPLETE_METHOD_CLASS_MAP.json  COMPONENT_AUDIT_REPORT.md  CONCURRENCY_MODULE_SUMMARY.md  CONFLICT_ANALYSIS.md  D1_IMPLEMENTATION_SUMMARY.md  D2_IMPLEMENTATION_SUMMARY.md  DEPENDENCY_SETUP.md  ENHANCED_RECOMMENDATION_ENGINE_README.md  EVALUATION_EXECUTIVE_SUMMARY.md  EXECUTION_REPORT.md  GOLD_CANARIO_TEST_SUMMARY.txt  HASH_CHAIN_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_CONTRACTS.md  IMPLEMENTATION_SUMMARY_MICRO_PROMPTS.md  IMPORT_AUDIT_SUMMARY.md  IMPORT_CERTIFICATION.md  (+117 more)
concurrency/: __init__.py  concurrency.py
config/: execution_mapping.yaml  forge_manifest.json  metadata_checksums.json  method_counts.json  recommendation_rules.json  recommendation_rules_enhanced.json
contracts/: __init__.py  importlinter.ini
core/: __init__.py  contracts.py
data/: interaction_matrix.csv  prompt_cross_registry.json  provenance.csv
determinism/: seeds.py
docs/: API_EXEMPTIONS.md  ARCHITECTURE_DIAGRAM.md  ARQUITECTURA_ORQUESTADOR_COREOGRAFO.md  AUDIT_REPORT.json  CHANGELOG_REFACTORING.md  CI_CD_GOVERNANCE.md  CONTRACT_ACCEPTANCE_CRITERIA.md  CONTRACT_AUDIT_REPORT.md  D1_ORCHESTRATION_ENFORCEMENT.md  D2_METHOD_CONCURRENCE.md  DATA_CONTRACTS.md  DEFENSIVE_SIGNATURES.md  EVALUATION_EXECUTIVE_SUMMARY.md  EVIDENCE_REGISTRY_ENHANCEMENTS.md  FINAL_DELIVERABLE_SUMMARY.md  GOLD_CANARIO_TEST_SUITE_README.md  GOVERNANCE_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY_CONTRACTS.md  INTEGRATION_SUMMARY.md  INVENTORY_COMPLETE.md  JSON_CATALOGUE_RULEBOOK.md  MESO_INTEGRATION_STRATEGY.md  MICRO_PROMPTS_GUIDE.md  MIGRATION_GUIDE.md  ORCHESTRATION_AUDIT_REPORT.md  ORCHESTRATOR_COMPREHENSIVE_EVALUATION.md  ORCHESTRATOR_IMPROVEMENTS.md  PIPELINE_E2E_AUDIT_REPORT.md  POST_REORGANIZATION_STEPS.md  PROSPECTIVE_DEFECTS.md  REORGANIZATION_SUMMARY.md  REPOSITORY_STRUCTURE.md  RUNTIME_ERROR_FIXES_GUIDE.md  SCHEMA_AUDIT_REPORT.md  SIGNATURE_FIX_SUMMARY.md  SIN_CARRETA_ARCH.md  SURFACE_MAP.md  SYSTEM_AUDIT_SUMMARY.md  UNIT_TEST_DEVELOPMENT_SUMMARY.md  dependency_graph.dot  (+1 more)
examples/: __init__.py  all_data_sample.json  choreographer_evidence_demo.py  cluster_data_sample.json  concurrency_integration_demo.py  d1_orchestration_integration.py  d2_orchestrator_usage.py  demo_aggregation.py  demo_bayesian_multilevel.py  demo_macro_prompts.py  demo_scoring.py  enhanced_evidence_demo.py  integration_guide_bayesian.py  integration_scoring_orchestrator.py  macro_data_sample.json  micro_prompts_integration_demo.py  micro_scores_sample.json  orchestrator_demo.py
executors/: __init__.py
ingestion/: README.md  __init__.py  document_ingestion.py
minipdm/: README.md  requirements.txt
orchestrator/: README.md  __init__.py  arg_router.py  canonical_registry.py  choreographer.py  choreographer_dispatch.py  class_registry.py  contract_loader.py  core.py  coreographer.py  d1_orchestrator.py  d2_activities_orchestrator.py  d2_integration.py  evidence_registry.py  executors.py  factory.py  orchestration.py  orchestrator.py  orchestrator_core.py  orchestrator_types.py  provider.py  settings.py
rules/: recommendation_rules.schema.json
saaaaaa/: __init__.py
schemas/: CHOREOGRAPHER_SCHEMA_INVENTORY.md  README.md  __init__.py  execution_mapping.schema.json  preprocessed_document.py  questionnaire.schema.json  rubric.schema.json  rubric_scoring.schema.json
scoring/: IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  scoring.py
scripts/: bootstrap_validate.py  build_monolith.py  count_producer_methods.py  generate_inventory.py  inventory_generator.py  update_imports.py  validate_imports.py  (+10 more)
(+221 files in other folders)
